# tud-cv

./: .gitignore  CMakeLists.txt  README.md
bilateral_filter/: CMakeLists.txt
bilateral_filter/include/: bilateral_filter.hpp  utility.hpp
bilateral_filter/src/: bilateral_filter.cpp  main.cpp
lab1/: CMakeLists.txt
lab1/include/: local_max.hpp
lab1/src/: local_max.cpp  main.cpp
lab2/: CMakeLists.txt
lab2/include/: gamma_correction.hpp  hist_equalization.hpp  integral.hpp  sobel_filter.hpp
lab2/src/: gamma_correction.cpp  hist_equalization.cpp  integral.cpp  main.cpp  sobel_filter.cpp
lab3/: CMakeLists.txt
lab3/include/: connected_component.hpp  median_filter.hpp
lab3/src/: connected_component.cpp  flood_filling.cpp  main.cpp  median_filter.cpp
lab4/: CMakeLists.txt
lab4/include/: feature_detection.hpp  pixel_classification.hpp
lab4/src/: feature_detection.cpp  main.cpp  pixel_classification.cpp
lab5/: CMakeLists.txt
lab5/include/: graph.hpp  min_cut.hpp
lab5/src/: boykov_kolmogorov.cpp  edmonds_karp.cpp  graph.cpp  main.cpp  min_cut.cpp
